codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_autoswitch_controls.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Automatic account switching on rate limits disabled for this session.


• Automatic account switching on rate limits enabled for this session.


• Automatic account switching on rate limits is on for this session.
