codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_command_usage.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
■ Usage: /account switch <email|id> [workspace-id]


■ Usage: /account switch <email|id> [workspace-id]


■ Usage: /account logout <email|id>


■ Usage: /account logout <email|id>


■ Usage: /account [list | switch <email|id> [workspace-id] | logout <email|id> | next | autoswitch [on|off|status]]
