codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_priming_run_output.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Last priming run: 1970-01-01 01:00:00 +01:00 | primed 0 | active 1 | unsupported 1 | failed 1
PROFILE      ACCOUNT             RESULT       5H RESET  WEEKLY RESET  DETAIL
-----------  ------------------  -----------  --------  ------------  ----------------------------------------
active       active@example.com  active       -         -             -
unsupported  API key             unsupported  -         -             API key auth does not expose ChatGPT us…
failed       -                   failed       -         -             failed to prime account: boom
