codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__account_priming_status_output.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
• Account priming
STATE: stopped
INTERVAL: -
STARTED: -
CURRENT RUN: -
CURRENT ACCOUNT: -
LAST RUN: none
